--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -39,3 +39,25 @@
     transform: translateY(0px);
   }
 }
+ul {
+  display: block;
+  list-style-type: none;
+  margin-top: 1em;
+  margin-bottom: 1 em;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+  /* padding-left: 40px; */
+}
+li {
+  padding: 5px 10px;
+  /* background-color: #AAAAAA;  */
+  border: 1px solid #DDDDDD;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+li:hover {
+  border: 1px solid #111111;
+
+}
