--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -61,8 +61,9 @@ li {
   padding: 5px 10px;
   /* background-color: #AAAAAA;  */
   border: 1px solid #DDDDDD;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  overflow-x: hidden;
 }
 
 li:hover {
@@ -76,4 +77,12 @@ span#ws-message {
 
 .profile-picture-frame {
   display: flex;
+}
+
+.blog-post {
+  display: flex;
+  width: 100%;
+  flex-flow: column;
+  align-items: center;
+  padding-top: 1rem;
 }
