--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -1,3 +1,4 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .App {
@@ -24,17 +25,6 @@
   font-size: calc(10px + 2vmin);
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
-  margin: 5px;
-}
-
-.App-link-profile {
-  color: rgb(112, 76, 182);
-  margin: 5px;
-  max-width: 4rem;  
-}
-
 
 @keyframes App-logo-float {
   0% {
@@ -47,49 +37,4 @@
     transform: translateY(0px);
   }
 }
-ul {
-  display: block;
-  list-style-type: none;
-  margin-top: 1em;
-  margin-bottom: 1 em;
-  margin-left: 0;
-  margin-right: 0;
-  padding: 0;
-  /* padding-left: 40px; */
-}
-li {
-  padding: 5px 10px;
-  /* background-color: #AAAAAA;  */
-  border: 1px solid #DDDDDD;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  overflow-x: hidden;
-}
 
-li:hover {
-  border: 1px solid #111111;
-
-}
-
-span#ws-message {
-  font-family: 'Space Mono', monospace;
-}
-
-.profile-picture-frame {
-  display: flex;
-  max-width: fit-content;
-  
-}
-
-.blog-post {
-  display: flex;
-  width: 100%;
-  flex-flow: column;
-  align-items: center;
-  padding-top: 1rem;
-}
-
-.app-navigation {
-  border-bottom: 'solid 1px';
-  padding-bottom: '1rem';
-}
