--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -223,6 +223,13 @@ a {
   border-radius: 100%;
 }
 
+.profile-image-limited {
+  /* margin-right: 1rem; */
+  width: 7rem;
+  border-radius: 100%;
+  border: #343a40 2px solid;
+}
+
 .shouter-name {
   margin-left: 1rem;
   font-weight: 400;
@@ -284,7 +291,9 @@ a {
 .centered-spinner-container {
   width: 100%;
   display: flex;
+  flex-direction: column-reverse;
   justify-content: center;
+  align-items: flex-end;
   margin-top: 7rem;
 }
 
