--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -470,3 +470,57 @@ a>span.app-clock {
   max-width: 80ch;
   padding-left: 1ch;
 }
+.custom-tag {
+  max-width: 100%;
+  padding: 5rem;
+  height: 500px;
+  background: black;
+  align-self: center;
+}
+
+.carousel-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 100%;
+  /* height: 500px; */
+  /* background: black; */
+}
+
+.carousel-item.active {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  /* height: 500px; */
+}
+.carousel-image {
+  display: flex;
+  border-radius: 5px;
+  margin-bottom: 2rem;
+  width: 25rem;
+  height: 25rem;
+}
+.carousel-caption h3 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  letter-spacing: 2px;
+  font-style:unset;
+  font-weight: lighter;
+  transition-delay: 0ms;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 4px 15px rgba(64, 64, 64, 0.3);
+  box-shadow: 0 4px 15px rgba(64, 64, 64, 0.3);
+  -webkit-transition: .3s;
+  transition: .3s
+}
+
+.spinner-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 27rem;
+  min-width: 25rem;
+}
