--- a/src/app/public/index.html
+++ b/src/app/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Vigilant Cloud</title>
+    <title>TS-Guestbook</title>
     <script src="https://kit.fontawesome.com/6ffd2271e0.js" crossorigin="anonymous"></script>
   </head>
   <body>
