added public facing profile page

--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -238,6 +238,19 @@ a {
   border: #343a40 2px solid;
 }
 
+.profile-image-frame {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.avatar-image {
+  border-radius: 50%;
+  width: 15vw;
+  max-width: fit-content;
+}
+
 .shouter-name {
   margin-left: 1rem;
   font-weight: 400;
@@ -270,7 +283,7 @@ a {
 
 .preview-image {
   max-width: 20rem;
-  border-radius: 1rem;
+  border-radius: 50%;
   margin: 1rem;
 }
 
@@ -285,8 +298,19 @@ a {
   max-width: 12rem;
 }
 
+.userlist-card-selected {
+  min-width: 12rem;
+  max-width: 12rem;
+  background-color: lightblue;
+}
+
 .userlist-card-offline {
   background-color: lightgray;
+  min-width: 12rem;
+  max-width: 12rem;
+}
+.userlist-card-offline-selected {
+  background-color: darkgrey;
   min-width: 12rem;
   max-width: 12rem;
 }
@@ -470,6 +494,22 @@ a>span.app-clock {
   max-width: 80ch;
   padding-left: 1ch;
 }
+
+.messenger-input {
+  max-width: 75ch;
+}
+
+.messenger-wrapper {
+  display: flex;
+  flex-flow: column;
+  align-items: space-around;
+  justify-content: center;
+  /* padding:2ch; */
+  /* border:rgba(33, 37, 41, 0.7) 1px solid; */
+  /* border-radius: 5px; */
+  margin-top: 1rem;
+}
+
 .custom-tag {
   max-width: 100%;
   padding: 5rem;
