--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -232,10 +232,8 @@ a {
 }
 
 .profile-image-limited {
-  /* margin-right: 1rem; */
   width: 7rem;
   border-radius: 50%;
-  border: #343a40 2px solid;
 }
 
 .profile-image-frame {
@@ -282,6 +280,7 @@ a {
 }
 
 .preview-image {
+  cursor: pointer;
   max-width: 20rem;
   border-radius: 50%;
   margin: 1rem;
@@ -451,7 +450,13 @@ a>span.app-clock {
 }
 
 .profile-page {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+
   animation: basicAnimation 1s;
+
 }
 
 .blog-post.card {
@@ -630,4 +635,16 @@ a>span.app-clock {
 
 .sign-in-link:hover {
   background-color: whitesmoke;
+}
+
+.dob {
+  margin-left: 1rem;
+}
+
+.delay-render {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+
 }
